--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@ html, body {
     font-family: VT323, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-#main-canvas {
+#main-canvas, #preview-canvas {
     display: block;
     width: 100%;
     height: 100%;
