Prepare moving block release
- add diagonal moving
- add weights to randOptions
- add limiting shapes
- rename classes

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: #0d0d0d;
+    background-color: #999999;
     padding: 0;
     margin: 0;
     overflow: hidden;
