Refactor debug view and improve big image capture
- use pixelRation 1 up to 960px
- add debug view as extra canvas
- drop color specific rotation factors - animation is now similar with different pixel ratio, though width and height has an impact on it

--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,14 @@ html, body {
     image-rendering: pixelated;
 }
 
+#main-canvas {
+    z-index: 1;
+}
+
+#debug-canvas {
+    z-index: 222;
+}
+
 .showit {
     position: absolute;
     top: 0;
@@ -44,7 +52,7 @@ html, body {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 999;
+    z-index: 998;
     margin: 0;
     padding: 20px;
     font-size: 2vmin;
